feat(NOT-266): Removed fields from campaign status endpoint
