# src/lambdas/pso/http.getCampaignStatus/handler.ts
@@ -17,19 +17,11 @@ const responseBodySchema = z.object({
   CampaignID: z.string(),
   DepartmentID: z.string(),
   ProcessingSummary: z.object({
-    VALIDATING: z.number(),
-    VALIDATED: z.number(),
-    VALIDATED_API_CALL: z.number(),
-    VALIDATION_FAILED: z.number(),
-    PROCESSING: z.number(),
+    RECEIVED: z.number(),
     PROCESSED: z.number(),
-    PROCESSING_FAILED: z.number(),
-    DISPATCHING: z.number(),
     DISPATCHED: z.number(),
-    DISPATCHING_FAILED: z.number(),
   }),
   UsageSummary: z.object({
-    RECEIVED: z.number(),
     READ: z.number(),
     MARKED_AS_UNREAD: z.number(),
     HIDDEN: z.number(),
@@ -74,19 +66,11 @@ export class GetCampaignStatus extends APIHandler<typeof requestBodySchema, type
         CampaignID: campaign.CompositeID.split('/')[1],
         DepartmentID: campaign.CompositeID.split('/')[0],
         ProcessingSummary: {
-          VALIDATING: campaign.VALIDATING ?? 0,
-          VALIDATED: campaign.VALIDATED ?? 0,
-          VALIDATED_API_CALL: campaign.VALIDATED_API_CALL ?? 0,
-          VALIDATION_FAILED: campaign.VALIDATION_FAILED ?? 0,
-          PROCESSING: campaign.PROCESSING ?? 0,
+          RECEIVED: (campaign.VALIDATED ?? 0) + (campaign.VALIDATED_API_CALL ?? 0),
           PROCESSED: campaign.PROCESSED ?? 0,
-          PROCESSING_FAILED: campaign.PROCESSING_FAILED ?? 0,
-          DISPATCHING: campaign.DISPATCHING ?? 0,
           DISPATCHED: campaign.DISPATCHED ?? 0,
-          DISPATCHING_FAILED: campaign.DISPATCHING_FAILED ?? 0,
         },
         UsageSummary: {
-          RECEIVED: campaign.RECEIVED ?? 0,
           READ: campaign.READ ?? 0,
           MARKED_AS_UNREAD: campaign.MARKED_AS_UNREAD ?? 0,
           HIDDEN: campaign.HIDDEN ?? 0,
